pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec__549-links.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 157
expression: "replace_system_specific_urls(render_to_string(markdown_file, &dumb_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/549-links.md
---
bar\[1]

[1]: /uri
